littleDuckParser.py
# Generated from littleDuck.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

 
from Middleman import *


class littleDuckParser ( Parser ):

    grammarFileName = "littleDuck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "':'", "','", "'int'", "'float'", "'bool'", 
                     "'{'", "'}'", "'='", "'if'", "'('", "')'", "'else'", 
                     "'do'", "'while'", "'print'", "'void'", "'['", "']'", 
                     "'>'", "'<'", "'!='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NEWLINE", 
                      "WHITESPACE", "CTE_INT", "CTE_FLOAT", "CTE_STRING", 
                      "ID" ]

    RULE_programa = 0
    RULE_opc_vars = 1
    RULE_optional_funcs = 2
    RULE_vars = 3
    RULE_mas_vars = 4
    RULE_mas_dec_vars = 5
    RULE_type = 6
    RULE_body = 7
    RULE_statement = 8
    RULE_options_statement = 9
    RULE_assign = 10
    RULE_condition = 11
    RULE_else = 12
    RULE_cycle = 13
    RULE_f_call = 14
    RULE_opc_f_call = 15
    RULE_mas_f_call = 16
    RULE_print = 17
    RULE_opc_print = 18
    RULE_mas_print = 19
    RULE_funcs = 20
    RULE_opc_funcs = 21
    RULE_mas_opc_funcs = 22
    RULE_next_opc_funcs = 23
    RULE_vars_funcs = 24
    RULE_cte = 25
    RULE_expresion = 26
    RULE_opc_expresion = 27
    RULE_exp = 28
    RULE_mas_exp = 29
    RULE_exp_signo = 30
    RULE_termino = 31
    RULE_mas_termino = 32
    RULE_signo_factor = 33
    RULE_factor = 34
    RULE_opc_factor = 35
    RULE_opc_signo = 36
    RULE_signo = 37
    RULE_opc_factor_prime = 38

    ruleNames =  [ "programa", "opc_vars", "optional_funcs", "vars", "mas_vars", 
                   "mas_dec_vars", "type", "body", "statement", "options_statement", 
                   "assign", "condition", "else", "cycle", "f_call", "opc_f_call", 
                   "mas_f_call", "print", "opc_print", "mas_print", "funcs", 
                   "opc_funcs", "mas_opc_funcs", "next_opc_funcs", "vars_funcs", 
                   "cte", "expresion", "opc_expresion", "exp", "mas_exp", 
                   "exp_signo", "termino", "mas_termino", "signo_factor", 
                   "factor", "opc_factor", "opc_signo", "signo", "opc_factor_prime" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    NEWLINE=31
    WHITESPACE=32
    CTE_INT=33
    CTE_FLOAT=34
    CTE_STRING=35
    ID=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def opc_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Opc_varsContext,0)


        def optional_funcs(self):
            return self.getTypedRuleContext(littleDuckParser.Optional_funcsContext,0)


        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = littleDuckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(littleDuckParser.T__0)
            self.state = 79
            localctx._ID = self.match(littleDuckParser.ID)

            program.variableTable["owner"] = (None if localctx._ID is None else localctx._ID.text)

            self.state = 81
            self.match(littleDuckParser.T__1)
            self.state = 82
            self.opc_vars()
            self.state = 83
            self.optional_funcs()
            self.state = 84
            self.match(littleDuckParser.T__2)
            self.state = 85
            self.body()
            self.state = 86
            self.match(littleDuckParser.T__3)

            program.insertQuad('end', None, None, None)
            print("Lista de cuádruplos: \n", program.quadruples)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opc_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(littleDuckParser.VarsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_opc_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpc_vars" ):
                listener.enterOpc_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpc_vars" ):
                listener.exitOpc_vars(self)




    def opc_vars(self):

        localctx = littleDuckParser.Opc_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_opc_vars)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)

                program.currentLevel = "global"

                self.state = 90
                self.vars_()
                pass
            elif token in [3, 21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optional_funcsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self):
            return self.getTypedRuleContext(littleDuckParser.FuncsContext,0)


        def optional_funcs(self):
            return self.getTypedRuleContext(littleDuckParser.Optional_funcsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_optional_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional_funcs" ):
                listener.enterOptional_funcs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional_funcs" ):
                listener.exitOptional_funcs(self)




    def optional_funcs(self):

        localctx = littleDuckParser.Optional_funcsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_optional_funcs)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.funcs()
                self.state = 95
                self.optional_funcs()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def mas_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_varsContext,0)


        def type_(self):
            return self.getTypedRuleContext(littleDuckParser.TypeContext,0)


        def mas_dec_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_dec_varsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = littleDuckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(littleDuckParser.T__4)
            self.state = 101
            localctx._ID = self.match(littleDuckParser.ID)

            program.declareNewVariable((None if localctx._ID is None else localctx._ID.text))

            self.state = 103
            self.mas_vars()
            self.state = 104
            self.match(littleDuckParser.T__5)
            self.state = 105
            self.type_()
            self.state = 106
            self.match(littleDuckParser.T__1)
            program.clearTempVarDeclaration()
            self.state = 108
            self.mas_dec_vars()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mas_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def mas_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_varsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_mas_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMas_vars" ):
                listener.enterMas_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMas_vars" ):
                listener.exitMas_vars(self)




    def mas_vars(self):

        localctx = littleDuckParser.Mas_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mas_vars)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(littleDuckParser.T__6)
                self.state = 111
                localctx._ID = self.match(littleDuckParser.ID)

                program.declareNewVariable((None if localctx._ID is None else localctx._ID.text))

                self.state = 113
                self.mas_vars()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mas_dec_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def mas_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_varsContext,0)


        def type_(self):
            return self.getTypedRuleContext(littleDuckParser.TypeContext,0)


        def mas_dec_vars(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_dec_varsContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_mas_dec_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMas_dec_vars" ):
                listener.enterMas_dec_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMas_dec_vars" ):
                listener.exitMas_dec_vars(self)




    def mas_dec_vars(self):

        localctx = littleDuckParser.Mas_dec_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mas_dec_vars)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                localctx._ID = self.match(littleDuckParser.ID)

                program.declareNewVariable((None if localctx._ID is None else localctx._ID.text))

                self.state = 119
                self.mas_vars()
                self.state = 120
                self.match(littleDuckParser.T__5)
                self.state = 121
                self.type_()
                self.state = 122
                self.match(littleDuckParser.T__1)
                program.clearTempVarDeclaration()
                self.state = 124
                self.mas_dec_vars()
                pass
            elif token in [3, 11, 21]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return littleDuckParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = littleDuckParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(littleDuckParser.T__7)
                program.currentType = "int"
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(littleDuckParser.T__8)
                program.currentType = "float"
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(littleDuckParser.T__9)
                program.currentType = "bool"
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(littleDuckParser.StatementContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = littleDuckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(littleDuckParser.T__10)
            self.state = 138
            self.statement()
            self.state = 139
            self.match(littleDuckParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def options_statement(self):
            return self.getTypedRuleContext(littleDuckParser.Options_statementContext,0)


        def statement(self):
            return self.getTypedRuleContext(littleDuckParser.StatementContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = littleDuckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 18, 20, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.options_statement()
                self.state = 142
                self.statement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Options_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(littleDuckParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(littleDuckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(littleDuckParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(littleDuckParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(littleDuckParser.PrintContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_options_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptions_statement" ):
                listener.enterOptions_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptions_statement" ):
                listener.exitOptions_statement(self)




    def options_statement(self):

        localctx = littleDuckParser.Options_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_options_statement)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(littleDuckParser.ExpresionContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = littleDuckParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            localctx._ID = self.match(littleDuckParser.ID)

            program.variableDeclared((None if localctx._ID is None else localctx._ID.text))

            self.state = 156
            self.match(littleDuckParser.T__12)
            self.state = 157
            self.expresion()

            if program.variableDeclared((None if localctx._ID is None else localctx._ID.text)):
                program.assignInsertQuad('=', program.stack_operands.pop(), None, (None if localctx._ID is None else localctx._ID.text))

            self.state = 159
            self.match(littleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(littleDuckParser.ExpresionContext,0)


        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def else_(self):
            return self.getTypedRuleContext(littleDuckParser.ElseContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = littleDuckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(littleDuckParser.T__13)
            self.state = 162
            self.match(littleDuckParser.T__14)
            self.state = 163
            self.expresion()
            self.state = 164
            self.match(littleDuckParser.T__15)

            if program.checkBoolExpression():
                program.insertQuad('GOTOF', program.stack_operands.pop(), None, None)
                program.stack_jumps.append(len(program.quadruples) - 1)
            self.state = 166
            self.body()
            self.state = 167
            self.else_()

            program.editQuad(2, len(program.quadruples), program.stack_jumps.pop())

            self.state = 169
            self.match(littleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)




    def else_(self):

        localctx = littleDuckParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_else)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(littleDuckParser.T__16)

                program.insertQuad('GOTO', None, None, None)
                program.editQuad(2, len(program.quadruples), program.stack_jumps.pop())
                program.stack_jumps.append(len(program.quadruples) - 1)

                self.state = 173
                self.body()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(littleDuckParser.BodyContext,0)


        def expresion(self):
            return self.getTypedRuleContext(littleDuckParser.ExpresionContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)




    def cycle(self):

        localctx = littleDuckParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(littleDuckParser.T__17)
            program.stack_jumps.append(len(program.quadruples))
            self.state = 179
            self.body()
            self.state = 180
            self.match(littleDuckParser.T__18)
            self.state = 181
            self.match(littleDuckParser.T__14)
            self.state = 182
            self.expresion()
            self.state = 183
            self.match(littleDuckParser.T__15)

            if program.checkBoolExpression():
                program.insertQuad('GOTOT', program.stack_operands.pop(), program.stack_jumps.pop(), None)

            self.state = 185
            self.match(littleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(littleDuckParser.ID, 0)

        def opc_f_call(self):
            return self.getTypedRuleContext(littleDuckParser.Opc_f_callContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_f_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_call" ):
                listener.enterF_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_call" ):
                listener.exitF_call(self)




    def f_call(self):

        localctx = littleDuckParser.F_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_f_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(littleDuckParser.ID)
            self.state = 188
            self.match(littleDuckParser.T__14)
            self.state = 189
            self.opc_f_call()
            self.state = 190
            self.match(littleDuckParser.T__15)
            self.state = 191
            self.match(littleDuckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opc_f_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(littleDuckParser.ExpresionContext,0)


        def mas_f_call(self):
            return self.getTypedRuleContext(littleDuckParser.Mas_f_callContext,0)


        def getRuleIndex(self):
            return littleDuckParser.RULE_opc_f_call
